peach/platform/pgbackweb/config/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgbackweb
  namespace: pgbackweb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgbackweb
  template:
    metadata:
      labels:
        app: pgbackweb
    spec:
      containers:
      - name: pgbackweb
        image: eduardolat/pgbackweb:0.2.0
        ports:
        - containerPort: 8085
