peach/platform/pgbackweb/config/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgbackweb
  namespace: pgbackweb
spec:
  selector:
    app: pgbackweb
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8085
